--- a/locale/i18n/dev/translation.json
+++ b/locale/i18n/dev/translation.json
@@ -19,5 +19,27 @@
   "Culture": "",
   "Social": "",
   "Click unknown word to see its translation": "",
-  "My language": ""
+  "My language": "",
+  "Delete selected": "",
+  "Cancel": "",
+  "My dictionaries": "",
+  "My settings": "",
+  "Autosave": "",
+  "Sort by": "",
+  "A-Z": "",
+  "Time added": "",
+  "Sign In": "",
+  "Sign Up": "",
+  "Sign in with Facebook": "",
+  "Sign in with Twitter": "",
+  "or": "",
+  "Forgot password": "",
+  "Login": "",
+  "Show my translations": "",
+  "Restore": "",
+  "News Sources": "",
+  "Translations": "",
+  "Add to dictionary": "",
+  "Password": "",
+  "Password again": ""
 }
