--- a/locale/i18n/ru-RU/translation.json
+++ b/locale/i18n/ru-RU/translation.json
@@ -8,7 +8,7 @@
   "Spanish": "Испанский",
   "Turkish": "Турецкий",
   "Sign out": "Выйти",
-  "Login&nbsp;via": "Войти с помощью",
+  "Login&nbsp;via": "Войти через",
   "All": "Всё",
   "World": "Мир",
   "Politics": "Политика",
@@ -19,5 +19,27 @@
   "Culture": "Культура",
   "Social": "Общество",
   "Click unknown word to see its translation": "Нажмите на незнакомое слово, чтобы перевести его",
-  "My language": "Язык перевода"
+  "My language": "Язык перевода",
+  "Delete selected": "Удалить выбранные",
+  "Cancel": "Отмена",
+  "My dictionaries": "Мой словарь",
+  "My settings": "Мои настройки",
+  "Autosave": "Автосохранение",
+  "Sort by": "Сортировать по",
+  "A-Z": "A-Z",
+  "Time added": "Время добавления",
+  "Sign In": "Войти",
+  "Sign Up": "Регистрация",
+  "Sign in with Facebook": "Войти через Facebook",
+  "Sign in with Twitter": "Войти через Twitter",
+  "or": "или",
+  "Forgot password": "Забыли пароль",
+  "Login": "Войти",
+  "Show my translations": "Показать мои слова",
+  "Restore": "Восстановить",
+  "News Sources": "Источники новостей",
+  "Translations": "Варианты перевода",
+  "Add to dictionary": "Добавить в словарь",
+  "Password": "Пароль",
+  "Password again": "Повторите пароль"
 }
